# digit_ai

./: .gitignore  app.py  app_torch.py  model_training.ipynb  model_training_cnn.ipynb  pyproject.toml  training_sklearn.ipynb
models/: mnist_cnn.pt
static/: index.js
templates/: index.html
